# ocb.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
ocb-sys/: Cargo.toml  build.rs  lib.rs  ocb.c
ocb_sys/: Cargo.toml  build.rs  lib.rs  print_ae_ctx_sizeof.c
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: lib.rs
tests/: iterative.rs  test_vectors.rs
